--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,9 +2,11 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/debugbar/
+/storage/clockwork/
 /vendor
-.env
-.env.backup
+.env*
+!.env.example
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
